--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -59,6 +59,17 @@
 		    <optional>true</optional>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.1.5.Final</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
